--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
+# Debug - Show the SQL code
+spring.jpa.show_sql = true
+
