--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/db_listaMercado?useTimezone=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Dialect
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 # Debug - Show the SQL code
 spring.jpa.show_sql = true
